# liquidator-rust

./: .env.example  .gitignore  Cargo.toml  discover.js
conf/: aggressive.toml  production.toml  testing.toml
config/assets/: aave-v3-arbitrum.toml  aave-v3-base.toml  aave-v3-celo.toml  aave-v3-ethereum.toml  aave-v3-optimism.toml  aave-v3-plasma.toml  hyperlend.toml
config/chains/: arbitrum.toml  base.toml  celo.toml  ethereum.toml  hyperliquid.toml  optimism.toml  plasma.toml
config/deployments/: aave-v3-arbitrum.toml  aave-v3-base.toml  aave-v3-celo.toml  aave-v3-ethereum.toml  aave-v3-optimism.toml  aave-v3-plasma.toml  hyperlend-prod.toml
config/protocols/: aave-v3-arbitrum.toml  aave-v3-base.toml  aave-v3-celo.toml  aave-v3-ethereum.toml  aave-v3-optimism.toml  aave-v3-plasma.toml  hyperlend.toml
contracts/: README.md  forge.sh  foundry.toml
contracts/script/: Deploy.s.sol  DeployArbitrum.s.sol  DeployBalancesReader.s.sol  DeployBalancesReaderArbitrum.s.sol  DeployBalancesReaderBase.s.sol  DeployBalancesReaderHyperliquid.s.sol  DeployBase.s.sol  DeployEthereum.s.sol  DeployHyperLiquid.s.sol  DeployOptimism.s.sol  FindLiquidations.s.sol  QueryLogs.s.sol  TestBalancesReader.s.sol  TestFlashLoan.s.sol  TestFlashLoanBase.s.sol  TestLiquidationFork.s.sol  TestSwap.s.sol
contracts/src/: BalancesReader.sol  Liquidator.sol
contracts/src/adapters/: DirectAdapter.sol  LiquidSwapAdapter.sol  UniswapV3Adapter.sol
contracts/src/interfaces/: ILiquidSwap.sol  ILiquidator.sol  IPool.sol  ISwapAdapter.sol  ISwapRouter.sol  IWETH.sol
contracts/src/libraries/: SwapDataDecoder.sol
contracts/test/: LiquidationE2E.t.sol  LiquidationFork.t.sol
contracts/test/fork/: ArbitrumFork.t.sol  FindLiquidations.t.sol  FlashLiquidatorE2E.t.sol  HyperLiquidFork.t.sol
contracts/test/fuzz/: FuzzLiquidator.t.sol
contracts/test/invariant/: LiquidatorInvariant.t.sol
contracts/test/invariant/handlers/: LiquidatorHandler.sol
contracts/test/unit/: Liquidator.t.sol
contracts/test/unit/adapters/: LiquidSwapAdapter.t.sol  UniswapV3Adapter.t.sol
contracts/test/utils/: MockContracts.sol  TestConstants.sol
crates/api/: Cargo.toml
crates/api/src/: blockanalitica.rs  lib.rs  liqd.rs
crates/api/src/swap/: liqd.rs  mod.rs  uniswap_v3.rs
crates/chain/: Cargo.toml
crates/chain/src/: contracts.rs  dual_oracle.rs  event_listener.rs  lib.rs  oracle_monitor.rs  provider.rs  signer.rs
crates/chain/src/contracts/: aave_v3.rs  bindings.rs  common.rs  executor.rs  mod.rs
crates/chain/src/gas/: eip1559.rs  legacy.rs  mod.rs
crates/chain/src/oracle/: chainlink.rs  config.rs  mod.rs  provider.rs  types.rs
crates/chain/src/protocol/: aave_v3.rs  events.rs  factory.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: assets.rs  heartbeat.rs  lib.rs  liquidator.rs  position.rs  position_tracker.rs  pre_staging.rs  scanner.rs  sensitivity.rs  trigger_index.rs  u256_math.rs
crates/core/src/config/: asset_config.rs  bot.rs  chain.rs  deployment.rs  loader.rs  mod.rs  protocol.rs  registry.rs
docs/: ARCHITECTURE_SPECS.md  CONTRACT_SPECIFICATION.md  CURRENT_STATE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PROFIT_CALCULATION_FIX.md
src/: main.rs
