[package]
name = "liquidator-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["aave-v3"]
# Protocol support flags
aave-v3 = []      # AAVE V3 and forks (HyperLend, etc.)
aave-v4 = []      # AAVE V4 (future)
compound-v3 = []  # Compound V3 (Comet)

[dependencies]
# Ethereum
alloy.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# HTTP
reqwest.workspace = true

# Concurrent data structures
dashmap.workspace = true
smallvec.workspace = true
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Utilities
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
hex.workspace = true
async-trait.workspace = true
