[package]
name = "hyperlend-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hyperlend-api = { path = "../api" }
hyperlend-chain = { path = "../chain" }

# Ethereum
alloy.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Concurrent data structures
dashmap.workspace = true
smallvec.workspace = true
arrayvec.workspace = true
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
toml.workspace = true
